--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-functional": "^5.0.7",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "next": "13.2.4",
